--- a/YURT-OTOMASYONU/Views/Personel/_AddStudent.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/_AddStudent.cshtml
@@ -1,54 +1,84 @@
-﻿
+﻿@model YURT_OTOMASYONU.ViewModels.Personel.StudentAddViewModel
+@using (Html.BeginForm("AddStudent", "Personel", new { Area = String.Empty }, FormMethod.Post, new { role = "form" }))
+{
+    <div class="col-xl-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Ad, new { @class = "form-control", placeholder = "Ad giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Soyad, new { @class = "form-control", placeholder = "Soyad giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.TCKimlikNo, new { @class = "form-control", placeholder = "TCKimlikNo giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.KanGrubu, new { @class = "form-control", placeholder = "KanGrubu giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Il, new { @class = "form-control", placeholder = "Il giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Ilce, new { @class = "form-control", placeholder = "Ilce giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.DogumYeri, new { @class = "form-control", placeholder = "Doğum Yeri giriniz", required = "required" })
+                </div>
 
-<div class="col-xl-12">
-    <div class="card">
-        <div class="card-body">
-            <div class="form-group">
-                <label class="form-label">  Ad</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Soyad</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">TCKimlikNo</label>
-            </div>   <div class="form-group">
-                <label class="form-label">KanGrubu</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Il</label>
-            </div>   <div class="form-group">
-                <label class="form-label">DogumTarihi</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">TelefonNo</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Adres</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Okul</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Bölüm</label>
-            </div> <div class="form-group">
-                <label class="form-label">Email</label>
-            </div> <div class="form-group">
-                <label class="form-label">KullaniciAdi</label>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Sifre</label>
-            </div>
+                <div class="form-group">
+                    <label>Doğum Tarihi</label>
+                    @Html.TextBoxFor(m => m.DogumTarihi, new { type = "datetime-local", placeholder = "Doğum Tarihi giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.AnneAdi, new { @class = "form-control", placeholder = "Anne adı  giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.BabaAdi, new { @class = "form-control", placeholder = "Baba adı giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.TelefonNo, new { @class = "form-control", placeholder = "Telefon No giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Adres, new { @class = "form-control", placeholder = "Adres giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Okul, new { @class = "form-control", placeholder = "OKul giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Bölüm, new { @class = "form-control", placeholder = "Bölüm giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Fakülte, new { @class = "form-control", placeholder = "Fakülte giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    <label>Giriş Tarihi</label>
 
+                    @Html.TextBoxFor(m => m.GirisTarihi, new { type = "datetime-local", placeholder = "Giriş Tarihi giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.KullaniciAdi, new { @class = "form-control", placeholder = "Kullanıcı Adı giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Sifre, new { @class = "form-control", placeholder = "Şifre giriniz", required = "required" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.OdaNo, new { @class = "form-control", placeholder = "Oda No giriniz", required = "required" })
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<hr />
-<div class="form-group form-group-sm row">
-    <div class="col-xs-12">
-        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal"><span style="color: white" class="fa fa-times"></span>&nbsp;&nbsp;Vazgeç</button>
-        <button type="submit" class="btn btn-success"><span style="color: white" class="fa fa-check"></span>&nbsp;&nbsp;Kaydet</button>
+    <hr />
+    <div class="form-group form-group-sm row">
+        <div class="col-xs-12">
+            <button class="btn btn-secondary" type="button" data-bs-dismiss="modal"><span style="color: white" class="fa fa-times"></span>&nbsp;&nbsp;Vazgeç</button>
+            <button type="submit" class="btn btn-success"><span style="color: white" class="fa fa-check"></span>&nbsp;&nbsp;Kaydet</button>
+        </div>
     </div>
-</div>
-<div class="clearfix"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>
+    <div class="clearfix"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>
 
+}
