Öğrenci Listesi Tasarımı Tamamlandı #45

--- a/YURT-OTOMASYONU/Views/Personel/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/Index.cshtml
@@ -61,7 +61,30 @@
             Yardımlar
         </a>
 
+        <div style="margin-top:20px" class="container">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Ad Soyad</th>
+                        <th>TC</th>
+                        <th>Oda No</th>
+                        <th>İşlem</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ad soyad</td>
+                        <td>tc</td>
+                        <td>odano</td>
+                        <td>
+                            <button type="button" class="btn btn-info">Sil</button>
+                            <button type="button" class="btn btn-info">Düzenle</button>
+                        </td>
+                    </tr>
 
+                </tbody>
+            </table>
+        </div>
     </div>  
 </body>
 </html>
