--- a/YURT-OTOMASYONU/Views/Personel/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-
+@model List<YURT_OTOMASYONU.Data.Ogrenci>
 
 
 
@@ -72,17 +72,22 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>ad soyad</td>
-                        <td>tc</td>
-                        <td>odano</td>
-                        <td>
-                            <button type="button" class="btn btn-info">Sil</button>
-                            <button type="button" class="btn btn-info">Düzenle</button>
-                        </td>
-                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
 
-                </tbody>
+                            <td>@item.Ad @item.Soyad</td>
+                            <td>@item.TCKimlikNo</td>
+                            <td>@item.OdaNo</td>
+                            <td>
+                                <button type="button" class="btn btn-info">Sil</button>
+                                <button type="button" class="btn btn-info">Düzenle</button>
+                            </td>
+                        
+
+                        </tr>
+                    }
+                    </tbody>
             </table>
         </div>
     </div>  
