--- a/YURT-OTOMASYONU/Views/Personel/_PermissionDetail.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/_PermissionDetail.cshtml
@@ -1,8 +1,17 @@
-﻿<div class="mb-3">
+﻿@model YURT_OTOMASYONU.Data.Izinler
+
+<div class="mb-3">
     <h5>Başlangıç Tarihi</h5>
+    <h5>@Model.BaslangicTarihi</h5>
+    <hr />
     <h5>Bitiş Tarihi</h5>
+    <h5>@Model.BitisTarihi</h5>
+    <hr />
     <h5>Açıklama</h5>
+    <h5>@Model.Aciklama</h5>
+    <hr />
     <h5>İletişim Numarası</h5>
+    <h5>@Model.İletisimNumarasi</h5>
 
 </div>
 <hr />
