--- a/YURT-OTOMASYONU/Views/Student/_DayFood.cshtml
+++ b/YURT-OTOMASYONU/Views/Student/_DayFood.cshtml
@@ -1,11 +1,21 @@
-﻿<div class="mb-3">
-    <h5>Yemek 1</h5>
-    <hr />
-    <h5>Yemek 2</h5>
-    <hr />
-    <h5>Yemek 3</h5>
-    <hr />
-    <h5>Yemek 4</h5>
-</div>
-<hr />
-<div class="clearfix"></div>
+﻿@model List<YURT_OTOMASYONU.Data.YemekListesi>
+
+@ViewBag.YemekYok
+
+ 
+    @foreach (var item in Model)
+    {
+        <div class="mb-3">
+            <h5>Yemek 1: @item.Yemek1</h5>
+            <hr />
+            <h5>Yemek 2: @item.Yemek2</h5>
+            <hr />
+            <h5>Yemek 3: @item.Yemek3</h5>
+            <hr />
+            <h5>Yemek 4: @item.Yemek4</h5>
+        </div>
+        <hr />
+        <div class="clearfix"></div>
+    }
+
+ 
