Müdür Sayfa Tasarımı Tamamlandı #17

--- a/YURT-OTOMASYONU/Views/Personel/Index.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/Index.cshtml
@@ -19,7 +19,8 @@
     <div style="margin-top:100px;margin-left:10px" class="btn-group">
         <button style="margin-right:10px" type="button" class="btn btn-success">Öğrenciler</button>
         <div class="vr"></div>
-        <button type="button" class="btn btn-success">Personeller</button>
+        <a href="@Url.Action("PersonelList", "Personel", routeValues: new {Area = string.Empty})" class="btn btn-success">Personeller</a>
+
     </div>
     <div style="margin-top:30px;margin-left:10px">
 
