--- a/YURT-OTOMASYONU/Views/Personel/_Payment.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/_Payment.cshtml
@@ -32,4 +32,18 @@
             }
             </tbody>
     </table>
-</div>
+</div><nav style="align-items:center">
+    <ul style="place-content: center" class="pagination">
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Geri</a>
+        </li>
+        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        <li class="page-item ">
+            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#">İleri</a>
+        </li>
+    </ul>
+</nav>
