--- a/YURT-OTOMASYONU/Views/Personel/_Payment.cshtml
+++ b/YURT-OTOMASYONU/Views/Personel/_Payment.cshtml
@@ -1,6 +1,9 @@
- 
 ﻿@model IEnumerable<YURT_OTOMASYONU.Data.Odemeler>
- 
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+
+
+
 <div class="container">
     <a data-modal-form="true"
        data-modal-size="modal-lg"
@@ -11,7 +14,7 @@
        class="btn btn-danger">
         Ödeme Yapmayanları Gör
     </a>
-    <table class="table table-bordered">
+    <table id="odemeYapanlar" class="table table-bordered">
         <thead>
             <tr>
                 <th>Ad Soyad</th>
@@ -30,20 +33,16 @@
                     <td>@item.Tutar</td>
                 </tr>
             }
-            </tbody>
+        </tbody>
     </table>
-</div><nav style="align-items:center">
-    <ul style="place-content: center" class="pagination">
-        <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Geri</a>
-        </li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item ">
-            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#">İleri</a>
-        </li>
-    </ul>
-</nav>
+</div>
+
+<script>
+    $(document).ready(function () {
+        $('#odemeYapanlar').DataTable({
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Turkish.json"
+            }
+        });
+    });
+</script>
